--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["frk <hazefrk+dev@gmail.com>"]
 
 [dependencies]
 base64 = "0.9.0"
-clap = "2.29.2"
 failure = "0.1.1"
 rust_sodium = "0.7.0"
+structopt = "0.1.6"
+structopt-derive = "0.1.6"
